--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@ permalink: "/"
 <div id="main">
 
 	<!-- One -->
-		<section id="one">
+		<section id="aboutme">
 			<header class="major">
-				<h2>Ipsum lorem dolor aliquam ante commodo<br />
-				magna sed accumsan arcu neque.</h2>
+				<h2>About Me</h2>
 			</header>
-			<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+			<p>I am currently a Data Scientist at Kaiser Permanente where I work on Digital Marketing Analytics. I've worked on forecasting models to forecast new memberships using Time Series Analysis and Marketing Mixed Models to quantify our marketing impact on new memberships. I've also managed AB Testing projects where I worked with business stakeholders, designers, and developers to develop testing concepts, analyze results and provide recommendations.</p>
+			<p>In my leisure time, I work on building web applications </p>
+			<p>I am currently a Data Scientist at Kaiser Permanente where I work on Digital Marketing Analytics. I've worked on forecasting models to </p>
 			<ul class="actions">
 				<li><a href="#two" class="button scrolly">Learn More</a></li>
 			</ul>
