--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ permalink: "/"
 <div id="main">
 
 	<!-- One -->
-		<section id="aboutme">
+		<section id="about_me">
 			<header class="major">
 				<h2>About Me</h2>
 			</header>
@@ -20,8 +20,8 @@ permalink: "/"
 		</section>
 
 	<!-- Two -->
-		<section id="two">
-			<h2>Recent Work</h2>
+		<section id="experience">
+			<h2>Experience</h2>
 			<div class="row">
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
@@ -60,7 +60,57 @@ permalink: "/"
 		</section>
 
 	<!-- Three -->
-	   	<section id="three">
+		<section id="education">
+			<h2>Education</h2>
+			<div class="row">
+				<article class="work-item">
+					<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+					<h3>Magna sed consequat tempus</h3>
+					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+				</article>
+				<article class="work-item">
+					<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
+					<h3>Ultricies lacinia interdum</h3>
+					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+				</article>
+				<article class="work-item">
+					<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
+					<h3>Tortor metus commodo</h3>
+					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+				</article>
+			</div>
+			<ul class="actions">
+				<li><a href="#" class="button">Full Portfolio</a></li>
+			</ul>
+		</section>
+
+	<!-- Four -->
+		<section id="projects">
+			<h2>Projects</h2>
+			<div class="row">
+				<article class="work-item">
+					<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+					<h3>Magna sed consequat tempus</h3>
+					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+				</article>
+				<article class="work-item">
+					<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
+					<h3>Ultricies lacinia interdum</h3>
+					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+				</article>
+				<article class="work-item">
+					<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
+					<h3>Tortor metus commodo</h3>
+					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+				</article>
+			</div>
+			<ul class="actions">
+				<li><a href="#" class="button">Full Portfolio</a></li>
+			</ul>
+		</section>
+
+	<!-- five -->
+	   	<section id="contact">
 			<h2>Get In Touch</h2>
 			<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
 			<div class="row">
