fixed resume button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ permalink: "/"
 			<p>In my leisure time, I work on building web applications </p>
 			<p>I am currently a Data Scientist at Kaiser Permanente where I work on Digital Marketing Analytics. I've worked on forecasting models to </p>
 			<ul class="actions">
-				<li><a href="#two" class="button">Resume/a></li>
+				<li><a href="#two" class="button scrolly">Resume</a></li>
 			</ul>
 		</section>
 
