--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@ layout: default
   }
 </style>
 
-<div class="container">
+<div class="main">
   <h1>404: Page not found :(</h1>
   <p>The requested page could not be found.</p>
 </div>
