fixed 404 page and added education information

--- a/404.html
+++ b/404.html
@@ -2,8 +2,9 @@
 layout: default
 permalink: /404.html
 ---
-
 <div class="main">
-  <h1>404: Page not found :(</h1>
-  <p>The requested page could not be found.</p>
+  <section id="about_me">
+    <h1>404: Page not found :(</h1>
+    <p>The requested page could not be found.</p>
+  </section>
 </div>
