--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@ permalink: "/"
 			<h2>Education</h2>
 			<div class="row">
 				<article class="work-item">
-					<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-					<h3>Magna sed consequat tempus</h3>
+					<h3>University of San Francisco</h3>
+					<span class='right'>2018</span>>
+					<h4>Master of Science in Data Science</h4>
 					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 				</article>
 				<article class="work-item">
