--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ permalink: "/"
 		<section id="about_me">
 			<h2>About Me</h2>
 			<p>I am currently a Data Scientist at Kaiser Permanente where I work on Digital Marketing Analytics. I've worked on forecasting models to forecast new memberships using Time Series Analysis and Marketing Mixed Models to quantify our marketing impact on new memberships. I've also managed AB Testing projects where I worked with business stakeholders, designers, and developers to develop testing concepts, analyze results and provide recommendations.</p>
-			<p>In my leisure time, I work on building web applications </p>
-			<p>I am currently a Data Scientist at Kaiser Permanente where I work on Digital Marketing Analytics. I've worked on forecasting models to </p>
+			<p> I have worked on a variety of projects ranging from Image Processing to Natural Language Processing.In my leisure time, I work on develop my skill set and work on projects that are interesting </p>
+			<p></p>
 			<ul class="actions">
 				<li><a href="#two" class="button scrolly">Resume</a></li>
 			</ul>
@@ -22,12 +22,12 @@ permalink: "/"
 			<h2>Experience</h2>
 			<div class="row">
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+					<a class="fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
 					<h3>Magna sed consequat tempus</h3>
 					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 				</article>
 				<article class="col-6 col-12-xsmall work-item">
-					<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
+					<a class="fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
 					<h3>Ultricies lacinia interdum</h3>
 					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 				</article>
@@ -52,35 +52,26 @@ permalink: "/"
 					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 				</article>
 			</div>
-			<ul class="actions">
-				<li><a href="#" class="button">Full Portfolio</a></li>
-			</ul>
 		</section>
 
 	<!-- Three -->
 		<section id="education">
 			<h2>Education</h2>
 			<div class="row">
-				<article class="work-item">
+				<div class="education">
+					<span>2017-2018</span>
 					<h3>University of San Francisco</h3>
-					<span class='right'>2018</span>>
+					
 					<h4>Master of Science in Data Science</h4>
-					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-				</article>
-				<article class="work-item">
-					<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-					<h3>Ultricies lacinia interdum</h3>
-					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-				</article>
-				<article class="work-item">
-					<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-					<h3>Tortor metus commodo</h3>
-					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-				</article>
+				</div>
+				<div class="education">
+					<span>2011-2016</span>
+					<h3>California State University, Long Beach</h3>
+					
+					<h4>Bachelor of Science, Applied Mathematics</h4>
+					<h4>Bachelor of Science, Physics</h4>
+				</div>
 			</div>
-			<ul class="actions">
-				<li><a href="#" class="button">Full Portfolio</a></li>
-			</ul>
 		</section>
 
 	<!-- Four -->
@@ -103,9 +94,6 @@ permalink: "/"
 					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 				</article>
 			</div>
-			<ul class="actions">
-				<li><a href="#" class="button">Full Portfolio</a></li>
-			</ul>
 		</section>
 
 	<!-- five -->
