--- a/404.html
+++ b/404.html
@@ -1,10 +1,11 @@
 ---
 layout: default
-permalink: /404.html
+permalink: "/404.html"
 ---
-<div class="main">
-  <section id="about_me">
-    <h1>404: Page not found :(</h1>
-    <p>The requested page could not be found.</p>
-  </section>
+<!-- Main -->
+<div id="main">
+    <section id="about_me">
+      <h1>404: Page not found :(</h1>
+      <p>The requested page could not be found.</p>
+    </section>
 </div>
