--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ permalink: "/"
 	<!-- Three -->
 		<section id="education">
 		<h2>Education</h2>
+		<div class="row">
 			<div class="education-block">
 				<h3>University of San Francisco</h3>
 				<span>2017-2018</span>
@@ -69,6 +70,7 @@ permalink: "/"
 				<h4>Bachelor of Science, Applied Mathematics</h4>
 				<h4>Bachelor of Science, Physics</h4>
 			</div>
+		</div>
 		</section>
 
 	<!-- Four -->
