--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ permalink: "/"
 	<!-- One -->
 		<section id="about_me">
 			<h2>About Me</h2>
-			<p>I am currently a Data Scientist at Kaiser Permanente where I work on Digital Marketing Analytics. I've worked on forecasting models to forecast new memberships using Time Series Analysis and Marketing Mixed Models to quantify our marketing impact on new memberships. I've also managed AB Testing projects where I worked with business stakeholders, designers, and developers to develop testing concepts, analyze results and provide recommendations.</p>
+			<p>I am currently a Data Scientist at Kaiser Permanente where I work on Digital Marketing Analytics. I've developed forecasting models to forecast new memberships using Time Series Analysis and Marketing Mixed Models to quantify our marketing impact on new memberships. I've also managed AB Testing projects where I worked with business stakeholders, designers, and developers to develop testing concepts, analyze results and provide recommendations.</p>
 			<p> I have worked on a variety of projects ranging from Image Processing to Natural Language Processing.In my leisure time, I work on develop my skill set and work on projects that are interesting </p>
 			<p></p>
 			<ul class="actions">
