--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@ permalink: "/"
 		        </div>
 		        <div class="col-12 col-12-xsmall">
 		           	<span class="image left"><img src="images/avatar.jpg"></span>
-		           	<h3>Kaiser Permanente<span class="education-date">2017-2018</span></h3>
-		           	this is what do
+		           	<h3>Kaiser Permanente</h3>
+					   <article class="col-md-offset-1 work-item">
+						Oct 2018 - Present
+					</article>
+					<h4>Data Scientist</h4>
 		        </div>
 		        <ul>
 		           		<li>hello this is what i did</li>
