updated website with resume and job experience

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ permalink: "/"
 			<p> I have worked on a variety of projects ranging from Image Processing to Natural Language Processing.In my leisure time, I work on develop my skill set and work on projects that are interesting </p>
 			<p></p>
 			<ul class="actions">
-				<li><a href="#two" class="button primary">Resume</a></li>
+				<li><a href="DavidKesResume.pdf" class="button primary">Resume</a></li>
 			</ul>
 		</section>
 
@@ -28,32 +28,28 @@ permalink: "/"
 		<section id="experience">
 			<h2>Experience</h2>
 			<div class="row">
-				<div class="col-12 col-12-xsmall text-right work-item">
-		           	<span class="image left"><img src="images/avatar.jpg"></span>
-		           	<h3>Kaiser Permanente<span class="education-date">2017-2018</span></h3>
-		           	<h4>Data Scientists</h4>
-		           	this is what do
-		        </div>
+				<div class="col-12 col-12-xsmall">
+					<span class="image left"><img src="images/KP_logo.png"></span>
+					<h3 style="margin: 0 0 0 0"> Data Scientist - Kaiser Permanente</h3>
+					<p class="col-md-offset-1 work-item">Oct 2018 - Present</p>
+			 	</div>
 		        <div class="col-12 col-12-xsmall">
-		           	<span class="image left"><img src="images/avatar.jpg"></span>
-		           	<h3>Kaiser Permanente</h3>
-					   <article class="col-md-offset-1 work-item">
-						Oct 2018 - Present
-					</article>
-					<h4>Data Scientist</h4>
+		           	<span class="image left"><img src="images/swiftly.png"></span>
+		           	<h3 style="margin: 0 0 0 0"> Data Scientist Intern - Swiftly Inc.</h3>
+					   <p class="col-md-offset-1 work-item">Oct 2017 - June 2018</p>
 		        </div>
-		        <ul>
-		           		<li>hello this is what i did</li>
-		           	</ul>
-		        <div class="col-md-6 col-xs-6">
-		          <h3>####Ultricies lacinia interdum</h3>
-					<p>####Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-		        </div>
-				<article class="col-md-offset-1 work-item">
-					<span class="image left"><img src="images/avatar.jpg"></span>
-					afafa
-				</article>
-				<article class="col-8 col-12-xsmall work-item">
+				<!-- <div class="col-12 col-12-xsmall">
+					<span class="image left"><img src="images/swiftly.png"></span>
+					<h3 style="margin: 0 0 0 0"> Data Scientist Intern - Swiftly Inc.</h3>
+					<p class="col-md-offset-1 work-item">Oct 2017 - June 2018</p>
+				</div>
+				<div class="col-12 col-12-xsmall">
+					<span class="image left"><img src="images/swiftly.png"></span>
+					<h3 style="margin: 0 0 0 0"> Data Scientist Intern - Swiftly Inc.</h3>
+					<p class="col-md-offset-1 work-item">Oct 2017 - June 2018</p>
+				</div> -->
+				
+				<!-- <article class="col-8 col-12-xsmall work-item">
 					<h3>Ultricies lacinia interdum</h3>
 					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 				</article>
@@ -76,7 +72,7 @@ permalink: "/"
 					<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
 					<h3>Risus ornare lacinia</h3>
 					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-				</article>
+				</article> -->
 			</div>
 		</section>
 
@@ -102,7 +98,7 @@ permalink: "/"
 			</div>
 		</section>
 	<!-- Four -->
-		<section id="projects">
+		<!-- <section id="projects">
 			<h2>Projects</h2>
 			<div class="row">
 				<article class="work-item">
@@ -121,10 +117,10 @@ permalink: "/"
 					<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 				</article>
 			</div>
-		</section>
+		</section> -->
 
 	<!-- five -->
-	   	<section id="contact">
+	   	<!-- <section id="contact">
 			<h2>Get In Touch</h2>
 			<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
 			<div class="row">
@@ -159,7 +155,7 @@ permalink: "/"
 					</ul>
 				</div>
 			</div>
-		</section>
+		</section> -->
 
 	<!--  Four -->
 	
